syntax = "proto3";
package syft.util;

message DataMessage {
  string magic_header = 1;
  string obj_type = 2;
  bytes content = 3;
}
